Added Exetera example

--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exetera Import Example\n",
+    "\n",
+    "This example demonstrates creating a simple database with a RandomDataset schema then converting it to a Exetera databse with its JSON schema. \n",
+    "\n",
+    "First thing to do is import `randomdataset` from the parent of this directory:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ed9565ba",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +22,19 @@
     "\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
     "\n",
-    "import randomdataset\n"
+    "import randomdataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The YAML schema is written out which will be used to generate the random data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "f71d1584",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -32,81 +48,101 @@
    "source": [
     "%%writefile randomschema.yaml\n",
     "\n",
-    "- name: participants\n",
-    "  typename: randomdataset.Dataset\n",
-    "  fields:\n",
-    "  - name: id\n",
-    "    typename: randomdataset.UIDFieldGen\n",
-    "  - name: FirstName\n",
-    "    typename: randomdataset.StrFieldGen\n",
-    "    lmin: 6\n",
-    "    lmax: 14\n",
-    "  - name: LastName\n",
-    "    typename: randomdataset.StrFieldGen\n",
-    "    lmin: 6\n",
-    "    lmax: 14\n",
-    "  - name: Age\n",
-    "    typename: randomdataset.IntFieldGen\n",
-    "    vmin: 18\n",
-    "    vmax: 90\n",
-    "  - name: is_employed\n",
-    "    typename: randomdataset.BoolFieldGen\n",
-    "    as_string: False\n",
+    "- typename: randomdataset.generators.CSVGenerator\n",
+    "  num_lines: 10\n",
+    "  dataset:\n",
+    "    name: participants\n",
+    "    typename: randomdataset.Dataset\n",
+    "    fields:\n",
+    "    - name: id\n",
+    "      typename: randomdataset.UIDFieldGen\n",
+    "    - name: FirstName\n",
+    "      typename: randomdataset.StrFieldGen\n",
+    "      lmin: 6\n",
+    "      lmax: 14\n",
+    "    - name: LastName\n",
+    "      typename: randomdataset.StrFieldGen\n",
+    "      lmin: 6\n",
+    "      lmax: 14\n",
+    "    - name: Age\n",
+    "      typename: randomdataset.IntFieldGen\n",
+    "      vmin: 18\n",
+    "      vmax: 90\n",
+    "    - name: is_employed\n",
+    "      typename: randomdataset.BoolFieldGen\n",
+    "      as_string: False\n",
     "        \n",
-    "- name: tests\n",
-    "  typename: randomdataset.Dataset\n",
-    "  fields:\n",
-    "  - name: id\n",
-    "    typename: randomdataset.UIDFieldGen\n",
-    "  - name: patient_id\n",
-    "    typename: randomdataset.UIDFieldGen\n",
-    "  - name: test_type\n",
-    "    typename: randomdataset.SetFieldGen\n",
-    "    field_type: str\n",
-    "    values: [\"Type1\", \"Type2\", \"Unknown\"]\n",
-    "  - name: location\n",
-    "    typename: randomdataset.StrFieldGen\n",
-    "  - name: result\n",
-    "    typename: randomdataset.IntFieldGen\n",
-    "    vmin: 0\n",
-    "    vmax: 3\n",
-    "  - name: value\n",
-    "    typename: randomdataset.FloatFieldGen\n",
-    "    vmin: 0\n",
-    "    vmax: 9"
+    "- typename: randomdataset.generators.CSVGenerator\n",
+    "  num_lines: 10\n",
+    "  dataset:\n",
+    "    name: tests\n",
+    "    typename: randomdataset.Dataset\n",
+    "    fields:\n",
+    "    - name: id\n",
+    "      typename: randomdataset.UIDFieldGen\n",
+    "    - name: patient_id\n",
+    "      typename: randomdataset.IntFieldGen\n",
+    "      vmin: 0\n",
+    "      vmax: 10\n",
+    "    - name: test_type\n",
+    "      typename: randomdataset.SetFieldGen\n",
+    "      field_type: str\n",
+    "      values: [\"Type1\", \"Type2\", \"Unknown\"]\n",
+    "    - name: location\n",
+    "      typename: randomdataset.StrFieldGen\n",
+    "    - name: result\n",
+    "      typename: randomdataset.IntFieldGen\n",
+    "      vmin: 0\n",
+    "      vmax: 3\n",
+    "    - name: value\n",
+    "      typename: randomdataset.FloatFieldGen\n",
+    "      vmin: 0\n",
+    "      vmax: 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of invoking the `generate_dataset` command line utility the command can be called directly through the imported library:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "999cbc61",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Schema: '<unopened file 'randomschema.yaml' r>'\n",
-      "Output: 'C:\\Users\\Eric\\workspace\\RandomDataset\\examples'\n",
-      "Generating 10 lines with 'randomdataset.generators.CSVGenerator'\n"
+      "Schema: 'randomschema.yaml'\n",
+      "Output: '.'\n"
      ]
     }
    ],
    "source": [
-    "!generate_dataset randomschema.yaml ."
+    "# !generate_dataset randomschema.yaml .\n",
+    "randomdataset.application.generate_dataset.callback(\"randomschema.yaml\",\".\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next the Exetera schema is written out, which looks like the YAML schema except with some extra specifiers for primary and foreign keys:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "04135b5b",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting exeteraschema.json\n"
+      "Writing exeteraschema.json\n"
      ]
     }
    ],
@@ -197,58 +233,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "5d0127f6",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import json\n",
-    "with open(\"exeteraschema.json\") as o:\n",
-    "    json.load(o)"
+    "The conversion command is run to produce the HDF5 dataset:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b69115b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'exetera.exe' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!exetera -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "7afc5f6b",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9999-01-01T00:00:00\n"
+      "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
+      "2021-04-07 22:20:09.965835+00:00\n",
+      "exeteraschema.json\n",
+      "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
+      "loading took 3.123283386230469e-05 seconds\n",
+      "loading took 2.2649765014648438e-05 seconds\n",
+      "0 rows parsed in 0.01653599739074707s\n",
+      "9 rows parsed in 0.08344888687133789s\n",
+      "participants <KeysViewHDF5 ['participants']>\n",
+      "0 rows parsed in 0.01759171485900879s\n",
+      "9 rows parsed in 0.1064302921295166s\n",
+      "tests <KeysViewHDF5 ['participants', 'tests']>\n",
+      "<KeysViewHDF5 ['participants', 'tests']>\n",
+      "total 207M\n",
+      "-rw-r--r-- 1 localek10 bioeng 207M Apr  7 23:20 dataset.hdf5\n",
+      "-rw-r--r-- 1 localek10 bioeng 8.4K Apr  7 23:18 exetera_import.ipynb\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr  7 23:11 exeteraschema.json\n",
+      "-rw-r--r-- 1 localek10 bioeng  398 Apr  7 23:15 participants.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr  7 23:15 randomschema.yaml\n",
+      "-rw-r--r-- 1 localek10 bioeng  456 Apr  7 23:15 tests.csv\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import datetime\n",
+    "%%bash\n",
     "\n",
-    "dt=datetime.datetime(year=9999, month=1, day=1)\n",
-    "print(dt.isoformat())\n",
-    "# print((dt - datetime.datetime(1970, 1, 1, tzinfo=datetime.timezone.utc)).total_seconds())\n",
-    "# valid_tos = np.full(10, dt.timestamp())"
+    "exetera import -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5\n",
+    "ls -lh"
    ]
   }
  ],
@@ -268,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
