Adding Codecov support

--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing exeteraschema.json\n"
+      "Overwriting exeteraschema.json\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,41 +249,94 @@
      "output_type": "stream",
      "text": [
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "2021-04-07 22:20:09.965835+00:00\n",
+      "2021-04-12 13:42:45.209943+00:00\n",
       "exeteraschema.json\n",
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "loading took 3.123283386230469e-05 seconds\n",
-      "loading took 2.2649765014648438e-05 seconds\n",
-      "0 rows parsed in 0.01653599739074707s\n",
-      "9 rows parsed in 0.08344888687133789s\n",
+      "loading took 2.5033950805664062e-05 seconds\n",
+      "loading took 2.3126602172851562e-05 seconds\n",
+      "0 rows parsed in 0.019425392150878906s\n",
+      "9 rows parsed in 0.09913277626037598s\n",
       "participants <KeysViewHDF5 ['participants']>\n",
-      "0 rows parsed in 0.01759171485900879s\n",
-      "9 rows parsed in 0.1064302921295166s\n",
+      "0 rows parsed in 0.020839691162109375s\n",
+      "9 rows parsed in 0.10392403602600098s\n",
       "tests <KeysViewHDF5 ['participants', 'tests']>\n",
       "<KeysViewHDF5 ['participants', 'tests']>\n",
       "total 207M\n",
-      "-rw-r--r-- 1 localek10 bioeng 207M Apr  7 23:20 dataset.hdf5\n",
-      "-rw-r--r-- 1 localek10 bioeng 8.4K Apr  7 23:18 exetera_import.ipynb\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr  7 23:11 exeteraschema.json\n",
-      "-rw-r--r-- 1 localek10 bioeng  398 Apr  7 23:15 participants.csv\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr  7 23:15 randomschema.yaml\n",
-      "-rw-r--r-- 1 localek10 bioeng  456 Apr  7 23:15 tests.csv\n"
+      "-rw-r--r-- 1 localek10 bioeng 207M Apr 12 14:42 dataset.hdf5\n",
+      "-rw-r--r-- 1 localek10 bioeng  17K Apr 12 14:42 exetera_import.ipynb\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr 12 12:31 exeteraschema.json\n",
+      "-rw-r--r-- 1 localek10 bioeng  391 Apr 10 20:17 participants.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.5K Apr  7 23:24 randomdataset.zip\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr 10 20:17 randomschema.yaml\n",
+      "-rw-r--r-- 1 localek10 bioeng  450 Apr 10 20:17 tests.csv\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "\n",
-    "exetera import -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5\n",
+    "rm -f dataset.hdf5\n",
+    "../../ExeTera_mine_old/exetera/bin/exetera import -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5\n",
     "ls -lh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(os.path.abspath(\"../../ExeTera\"))\n",
+    "import exetera, exetera.core, exetera.processing\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['participants', 'tests']) ['participants', 'tests']\n",
+      "10\n",
+      "['LBEPVfhEQ6wns', '5IN786f', '6Ty8EO1haBV', 'KuLyontosIrXl', 'MAfu02TY6', 'Ybhqx1x', 'dv6Jw5s', 'uqdWqkkRGp', 'fNlksFT', 'jTv5YQh8c']\n",
+      "/participants/FirstName: unexpected exception index is out of range\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "index is out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-60c80ad3cd53>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# correctly reports 10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# works\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# exception, should be equivalent to the above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/workspace/ExeTera/exetera/core/fields.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    173\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_index_dataset\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"index is out of range\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m                 \u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_index_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mitem\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mstart\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: index is out of range"
+     ]
+    }
+   ],
+   "source": [
+    "with exetera.core.session.Session() as s:\n",
+    "    dat = s.open_dataset(\"dataset.hdf5\", \"r\", \"dataset\")\n",
+    "    print(dat.keys(), list(dat))\n",
+    "    \n",
+    "    d=dat[\"participants\"][\"FirstName\"]\n",
+    "    field = s.get(d)\n",
+    "    print(len(field))  # correctly reports 10\n",
+    "    print([field.data[i] for i in range(len(field))])  # works\n",
+    "    print(list(field.data))  # exception, should be equivalent to the above"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
