--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,26 +249,30 @@
      "output_type": "stream",
      "text": [
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "2021-04-12 13:42:45.209943+00:00\n",
+      "2021-04-13 15:17:10.319812+00:00\n",
       "exeteraschema.json\n",
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "loading took 2.5033950805664062e-05 seconds\n",
-      "loading took 2.3126602172851562e-05 seconds\n",
-      "0 rows parsed in 0.019425392150878906s\n",
-      "9 rows parsed in 0.09913277626037598s\n",
+      "loading took 2.5510787963867188e-05 seconds\n",
+      "loading took 2.2172927856445312e-05 seconds\n",
+      "0 rows parsed in 0.020249366760253906s\n",
+      "9 rows parsed in 0.10116267204284668s\n",
       "participants <KeysViewHDF5 ['participants']>\n",
-      "0 rows parsed in 0.020839691162109375s\n",
-      "9 rows parsed in 0.10392403602600098s\n",
+      "0 rows parsed in 0.02090620994567871s\n",
+      "9 rows parsed in 0.10543584823608398s\n",
       "tests <KeysViewHDF5 ['participants', 'tests']>\n",
       "<KeysViewHDF5 ['participants', 'tests']>\n",
       "total 207M\n",
-      "-rw-r--r-- 1 localek10 bioeng 207M Apr 12 14:42 dataset.hdf5\n",
-      "-rw-r--r-- 1 localek10 bioeng  17K Apr 12 14:42 exetera_import.ipynb\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr 12 12:31 exeteraschema.json\n",
-      "-rw-r--r-- 1 localek10 bioeng  391 Apr 10 20:17 participants.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng  292 Apr 13 15:02 customers.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng 207M Apr 13 16:17 dataset.hdf5\n",
+      "-rw-r--r-- 1 localek10 bioeng  11K Apr 13 16:02 exetera_import.ipynb\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr 13 16:17 exeteraschema.json\n",
+      "-rw-r--r-- 1 localek10 bioeng  391 Apr 13 16:17 participants.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng  793 Apr 13 15:02 paymentschema.yaml\n",
+      "-rw-r--r-- 1 localek10 bioeng  803 Apr 13 15:02 payments.csv\n",
       "-rw-r--r-- 1 localek10 bioeng 1.5K Apr  7 23:24 randomdataset.zip\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr 10 20:17 randomschema.yaml\n",
-      "-rw-r--r-- 1 localek10 bioeng  450 Apr 10 20:17 tests.csv\n"
+      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr 13 16:17 randomschema.yaml\n",
+      "-rw-r--r-- 1 localek10 bioeng 5.1K Apr 13 15:02 simple_dataset.ipynb\n",
+      "-rw-r--r-- 1 localek10 bioeng  458 Apr 13 16:17 tests.csv\n"
      ]
     }
    ],
@@ -282,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -301,21 +305,21 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['participants', 'tests']) ['participants', 'tests']\n",
+      "<class 'exetera.core.fields.IndexedStringField'>\n",
       "10\n",
-      "['LBEPVfhEQ6wns', '5IN786f', '6Ty8EO1haBV', 'KuLyontosIrXl', 'MAfu02TY6', 'Ybhqx1x', 'dv6Jw5s', 'uqdWqkkRGp', 'fNlksFT', 'jTv5YQh8c']\n",
-      "/participants/FirstName: unexpected exception index is out of range\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "index is out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-60c80ad3cd53>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# correctly reports 10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# works\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# exception, should be equivalent to the above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/workspace/ExeTera/exetera/core/fields.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    173\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_index_dataset\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"index is out of range\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m                 \u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_index_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mitem\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mstart\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: index is out of range"
+      "11\n",
+      "0 98\n",
+      "['veUYdBahsbE4', 'FJ1Y8T', 'Qo7E4E8iIiHPW', 'UWSJMDdJkfMs', '2VygIB6O3', '8dAAWV1', 'm34FFc', '7XkCvlG2OUqTp', 'YPykjabOf207', 'a3dyA28W']\n",
+      "0 veUYdBahsbE4\n",
+      "1 FJ1Y8T\n",
+      "2 Qo7E4E8iIiHPW\n",
+      "3 UWSJMDdJkfMs\n",
+      "4 2VygIB6O3\n",
+      "5 8dAAWV1\n",
+      "6 m34FFc\n",
+      "7 7XkCvlG2OUqTp\n",
+      "8 YPykjabOf207\n",
+      "9 a3dyA28W\n"
      ]
     }
    ],
@@ -323,12 +327,19 @@
     "with exetera.core.session.Session() as s:\n",
     "    dat = s.open_dataset(\"dataset.hdf5\", \"r\", \"dataset\")\n",
     "    print(dat.keys(), list(dat))\n",
+    "\n",
+    "    field = dat[\"participants\"][\"FirstName\"]\n",
     "    \n",
-    "    d=dat[\"participants\"][\"FirstName\"]\n",
-    "    field = s.get(d)\n",
+    "    print(type(field))\n",
     "    print(len(field))  # correctly reports 10\n",
+    "    print(len(field.data._index_dataset))\n",
+    "    print(field.data._index_dataset[0],field.data._index_dataset[10])\n",
+    "\n",
     "    print([field.data[i] for i in range(len(field))])  # works\n",
-    "    print(list(field.data))  # exception, should be equivalent to the above"
+    "    for i in range(len(field)):\n",
+    "        print(i,field.data[i])\n",
+    "        \n",
+    "#     print(list(field.data))  # exception, should be equivalent to the above"
    ]
   }
  ],
