--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -249,30 +249,30 @@
      "output_type": "stream",
      "text": [
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "2021-04-13 15:17:10.319812+00:00\n",
+      "2021-04-13 20:50:30.026856+00:00\n",
       "exeteraschema.json\n",
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "loading took 2.5510787963867188e-05 seconds\n",
-      "loading took 2.2172927856445312e-05 seconds\n",
-      "0 rows parsed in 0.020249366760253906s\n",
-      "9 rows parsed in 0.10116267204284668s\n",
+      "loading took 2.7418136596679688e-05 seconds\n",
+      "loading took 2.1219253540039062e-05 seconds\n",
+      "0 rows parsed in 0.02012801170349121s\n",
+      "9 rows parsed in 0.10176253318786621s\n",
       "participants <KeysViewHDF5 ['participants']>\n",
-      "0 rows parsed in 0.02090620994567871s\n",
-      "9 rows parsed in 0.10543584823608398s\n",
+      "0 rows parsed in 0.025080204010009766s\n",
+      "9 rows parsed in 0.11012411117553711s\n",
       "tests <KeysViewHDF5 ['participants', 'tests']>\n",
       "<KeysViewHDF5 ['participants', 'tests']>\n",
       "total 207M\n",
       "-rw-r--r-- 1 localek10 bioeng  292 Apr 13 15:02 customers.csv\n",
-      "-rw-r--r-- 1 localek10 bioeng 207M Apr 13 16:17 dataset.hdf5\n",
-      "-rw-r--r-- 1 localek10 bioeng  11K Apr 13 16:02 exetera_import.ipynb\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr 13 16:17 exeteraschema.json\n",
-      "-rw-r--r-- 1 localek10 bioeng  391 Apr 13 16:17 participants.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng 207M Apr 13 21:50 dataset.hdf5\n",
+      "-rw-r--r-- 1 localek10 bioeng  12K Apr 13 21:50 exetera_import.ipynb\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr 13 21:50 exeteraschema.json\n",
+      "-rw-r--r-- 1 localek10 bioeng  413 Apr 13 21:50 participants.csv\n",
       "-rw-r--r-- 1 localek10 bioeng  793 Apr 13 15:02 paymentschema.yaml\n",
       "-rw-r--r-- 1 localek10 bioeng  803 Apr 13 15:02 payments.csv\n",
       "-rw-r--r-- 1 localek10 bioeng 1.5K Apr  7 23:24 randomdataset.zip\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr 13 16:17 randomschema.yaml\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr 13 21:50 randomschema.yaml\n",
       "-rw-r--r-- 1 localek10 bioeng 5.1K Apr 13 15:02 simple_dataset.ipynb\n",
-      "-rw-r--r-- 1 localek10 bioeng  458 Apr 13 16:17 tests.csv\n"
+      "-rw-r--r-- 1 localek10 bioeng  456 Apr 13 21:50 tests.csv\n"
      ]
     }
    ],
@@ -297,49 +297,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['participants', 'tests']) ['participants', 'tests']\n",
+      "['participants', 'tests']\n",
       "<class 'exetera.core.fields.IndexedStringField'>\n",
       "10\n",
-      "11\n",
-      "0 98\n",
-      "['veUYdBahsbE4', 'FJ1Y8T', 'Qo7E4E8iIiHPW', 'UWSJMDdJkfMs', '2VygIB6O3', '8dAAWV1', 'm34FFc', '7XkCvlG2OUqTp', 'YPykjabOf207', 'a3dyA28W']\n",
-      "0 veUYdBahsbE4\n",
-      "1 FJ1Y8T\n",
-      "2 Qo7E4E8iIiHPW\n",
-      "3 UWSJMDdJkfMs\n",
-      "4 2VygIB6O3\n",
-      "5 8dAAWV1\n",
-      "6 m34FFc\n",
-      "7 7XkCvlG2OUqTp\n",
-      "8 YPykjabOf207\n",
-      "9 a3dyA28W\n"
+      "0 eS5RO30s5l\n",
+      "1 Uq5Xvg104k26\n",
+      "2 qpdOaVbkWxU8P\n",
+      "3 4MfNDqcQuDe1s\n",
+      "4 kQDdlpQQjW\n",
+      "5 xqQjWvI\n",
+      "6 Lc2iriaKGc\n",
+      "7 xvQtag\n",
+      "8 5DdjIHXf2TCvl\n",
+      "9 JXFcQK0KtUf0y\n"
      ]
     }
    ],
    "source": [
     "with exetera.core.session.Session() as s:\n",
     "    dat = s.open_dataset(\"dataset.hdf5\", \"r\", \"dataset\")\n",
-    "    print(dat.keys(), list(dat))\n",
+    "    print(list(dat))\n",
     "\n",
     "    field = dat[\"participants\"][\"FirstName\"]\n",
     "    \n",
     "    print(type(field))\n",
-    "    print(len(field))  # correctly reports 10\n",
-    "    print(len(field.data._index_dataset))\n",
-    "    print(field.data._index_dataset[0],field.data._index_dataset[10])\n",
+    "    print(len(field))\n",
     "\n",
-    "    print([field.data[i] for i in range(len(field))])  # works\n",
     "    for i in range(len(field)):\n",
-    "        print(i,field.data[i])\n",
-    "        \n",
-    "#     print(list(field.data))  # exception, should be equivalent to the above"
+    "        print(i,field.data[i])"
    ]
   }
  ],
