--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing exeteraschema.json\n"
+      "Overwriting exeteraschema.json\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,41 +249,97 @@
      "output_type": "stream",
      "text": [
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "2021-04-07 22:20:09.965835+00:00\n",
+      "2021-04-13 20:50:30.026856+00:00\n",
       "exeteraschema.json\n",
       "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "loading took 3.123283386230469e-05 seconds\n",
-      "loading took 2.2649765014648438e-05 seconds\n",
-      "0 rows parsed in 0.01653599739074707s\n",
-      "9 rows parsed in 0.08344888687133789s\n",
+      "loading took 2.7418136596679688e-05 seconds\n",
+      "loading took 2.1219253540039062e-05 seconds\n",
+      "0 rows parsed in 0.02012801170349121s\n",
+      "9 rows parsed in 0.10176253318786621s\n",
       "participants <KeysViewHDF5 ['participants']>\n",
-      "0 rows parsed in 0.01759171485900879s\n",
-      "9 rows parsed in 0.1064302921295166s\n",
+      "0 rows parsed in 0.025080204010009766s\n",
+      "9 rows parsed in 0.11012411117553711s\n",
       "tests <KeysViewHDF5 ['participants', 'tests']>\n",
       "<KeysViewHDF5 ['participants', 'tests']>\n",
       "total 207M\n",
-      "-rw-r--r-- 1 localek10 bioeng 207M Apr  7 23:20 dataset.hdf5\n",
-      "-rw-r--r-- 1 localek10 bioeng 8.4K Apr  7 23:18 exetera_import.ipynb\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr  7 23:11 exeteraschema.json\n",
-      "-rw-r--r-- 1 localek10 bioeng  398 Apr  7 23:15 participants.csv\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr  7 23:15 randomschema.yaml\n",
-      "-rw-r--r-- 1 localek10 bioeng  456 Apr  7 23:15 tests.csv\n"
+      "-rw-r--r-- 1 localek10 bioeng  292 Apr 13 15:02 customers.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng 207M Apr 13 21:50 dataset.hdf5\n",
+      "-rw-r--r-- 1 localek10 bioeng  12K Apr 13 21:50 exetera_import.ipynb\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr 13 21:50 exeteraschema.json\n",
+      "-rw-r--r-- 1 localek10 bioeng  413 Apr 13 21:50 participants.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng  793 Apr 13 15:02 paymentschema.yaml\n",
+      "-rw-r--r-- 1 localek10 bioeng  803 Apr 13 15:02 payments.csv\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.5K Apr  7 23:24 randomdataset.zip\n",
+      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr 13 21:50 randomschema.yaml\n",
+      "-rw-r--r-- 1 localek10 bioeng 5.1K Apr 13 15:02 simple_dataset.ipynb\n",
+      "-rw-r--r-- 1 localek10 bioeng  456 Apr 13 21:50 tests.csv\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "\n",
-    "exetera import -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5\n",
+    "rm -f dataset.hdf5\n",
+    "../../ExeTera_mine_old/exetera/bin/exetera import -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5\n",
     "ls -lh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(os.path.abspath(\"../../ExeTera\"))\n",
+    "import exetera, exetera.core, exetera.processing\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['participants', 'tests']\n",
+      "<class 'exetera.core.fields.IndexedStringField'>\n",
+      "10\n",
+      "0 eS5RO30s5l\n",
+      "1 Uq5Xvg104k26\n",
+      "2 qpdOaVbkWxU8P\n",
+      "3 4MfNDqcQuDe1s\n",
+      "4 kQDdlpQQjW\n",
+      "5 xqQjWvI\n",
+      "6 Lc2iriaKGc\n",
+      "7 xvQtag\n",
+      "8 5DdjIHXf2TCvl\n",
+      "9 JXFcQK0KtUf0y\n"
+     ]
+    }
+   ],
+   "source": [
+    "with exetera.core.session.Session() as s:\n",
+    "    dat = s.open_dataset(\"dataset.hdf5\", \"r\", \"dataset\")\n",
+    "    print(list(dat))\n",
+    "\n",
+    "    field = dat[\"participants\"][\"FirstName\"]\n",
+    "    \n",
+    "    print(type(field))\n",
+    "    print(len(field))\n",
+    "\n",
+    "    for i in range(len(field)):\n",
+    "        print(i,field.data[i])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
