--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -280,7 +280,7 @@
     "%%bash\n",
     "\n",
     "rm -f dataset.hdf5\n",
-    "../../ExeTera_mine_old/exetera/bin/exetera import -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5\n",
+    "exetera import -s exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5\n",
     "ls -lh"
    ]
   },
