--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "      <td>b'eMIr6rSfr'</td>\n",
        "      <td>b'0'</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'eS5RO30s5l'</td>\n",
        "      <td>49</td>\n",
@@ -538,7 +538,7 @@
        "      <td>b'TvlcCTras0o'</td>\n",
        "      <td>b'1'</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'Uq5Xvg104k26'</td>\n",
        "      <td>82</td>\n",
@@ -551,7 +551,7 @@
        "      <td>b'BfbMR5vc732'</td>\n",
        "      <td>b'2'</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'qpdOaVbkWxU8P'</td>\n",
        "      <td>78</td>\n",
@@ -564,7 +564,7 @@
        "      <td>b'1TloPOuw4XB'</td>\n",
        "      <td>b'3'</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'4MfNDqcQuDe1s'</td>\n",
        "      <td>88</td>\n",
@@ -577,7 +577,7 @@
        "      <td>b'FflsTMEBY3'</td>\n",
        "      <td>b'4'</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'kQDdlpQQjW'</td>\n",
        "      <td>56</td>\n",
@@ -590,7 +590,7 @@
        "      <td>b'5sa3H67GPVBw'</td>\n",
        "      <td>b'5'</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'xqQjWvI'</td>\n",
        "      <td>42</td>\n",
@@ -603,7 +603,7 @@
        "      <td>b'UauvtgV'</td>\n",
        "      <td>b'6'</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'Lc2iriaKGc'</td>\n",
        "      <td>20</td>\n",
@@ -616,7 +616,7 @@
        "      <td>b'ADugcwJaNivhb'</td>\n",
        "      <td>b'7'</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'xvQtag'</td>\n",
        "      <td>71</td>\n",
@@ -629,7 +629,7 @@
        "      <td>b'pdwWWe'</td>\n",
        "      <td>b'8'</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'5DdjIHXf2TCvl'</td>\n",
        "      <td>86</td>\n",
@@ -642,7 +642,7 @@
        "      <td>b'2Gi8urgnAJBp'</td>\n",
        "      <td>b'9'</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.618849e+09</td>\n",
+       "      <td>1.618862e+09</td>\n",
        "      <td>2.533708e+11</td>\n",
        "      <td>b'JXFcQK0KtUf0y'</td>\n",
        "      <td>30</td>\n",
@@ -665,19 +665,19 @@
        "9   30       True  b'JXFcQK0KtUf0y'   b'2Gi8urgnAJBp'  b'9'            2   \n",
        "\n",
        "   j_valid_from    j_valid_to        FirstName1  Age1  \n",
-       "0  1.618849e+09  2.533708e+11     b'eS5RO30s5l'    49  \n",
-       "1  1.618849e+09  2.533708e+11   b'Uq5Xvg104k26'    82  \n",
-       "2  1.618849e+09  2.533708e+11  b'qpdOaVbkWxU8P'    78  \n",
-       "3  1.618849e+09  2.533708e+11  b'4MfNDqcQuDe1s'    88  \n",
-       "4  1.618849e+09  2.533708e+11     b'kQDdlpQQjW'    56  \n",
-       "5  1.618849e+09  2.533708e+11        b'xqQjWvI'    42  \n",
-       "6  1.618849e+09  2.533708e+11     b'Lc2iriaKGc'    20  \n",
-       "7  1.618849e+09  2.533708e+11         b'xvQtag'    71  \n",
-       "8  1.618849e+09  2.533708e+11  b'5DdjIHXf2TCvl'    86  \n",
-       "9  1.618849e+09  2.533708e+11  b'JXFcQK0KtUf0y'    30  "
+       "0  1.618862e+09  2.533708e+11     b'eS5RO30s5l'    49  \n",
+       "1  1.618862e+09  2.533708e+11   b'Uq5Xvg104k26'    82  \n",
+       "2  1.618862e+09  2.533708e+11  b'qpdOaVbkWxU8P'    78  \n",
+       "3  1.618862e+09  2.533708e+11  b'4MfNDqcQuDe1s'    88  \n",
+       "4  1.618862e+09  2.533708e+11     b'kQDdlpQQjW'    56  \n",
+       "5  1.618862e+09  2.533708e+11        b'xqQjWvI'    42  \n",
+       "6  1.618862e+09  2.533708e+11     b'Lc2iriaKGc'    20  \n",
+       "7  1.618862e+09  2.533708e+11         b'xvQtag'    71  \n",
+       "8  1.618862e+09  2.533708e+11  b'5DdjIHXf2TCvl'    86  \n",
+       "9  1.618862e+09  2.533708e+11  b'JXFcQK0KtUf0y'    30  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,13 +715,281 @@
     "\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we will create a new dataset in a new directory then merge that with our existing one:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Schema: '<unopened file 'randomschema.yaml' r>'\n",
+      "Output: '/home/localek10/workspace/RandomDataset/examples/other_dataset'\n",
+      "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
+      "2021-04-19 19:47:18.758719+00:00\n",
+      "../exeteraschema.json\n",
+      "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
+      "loading took 3.123283386230469e-05 seconds\n",
+      "loading took 2.0742416381835938e-05 seconds\n",
+      "0 rows parsed in 0.015840768814086914s\n",
+      "9 rows parsed in 0.1236565113067627s\n",
+      "participants <KeysViewHDF5 ['participants']>\n",
+      "0 rows parsed in 0.023722410202026367s\n",
+      "9 rows parsed in 0.11020088195800781s\n",
+      "tests <KeysViewHDF5 ['participants', 'tests']>\n",
+      "<KeysViewHDF5 ['participants', 'tests']>\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "mkdir -p other_dataset\n",
+    "generate_dataset randomschema.yaml other_dataset\n",
+    "cd other_dataset\n",
+    "\n",
+    "rm -f dataset.hdf5\n",
+    "exetera import -w -s ../exeteraschema.json -i \"participants:participants.csv, tests:tests.csv\" -o dataset.hdf5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Age_valid</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>LastName</th>\n",
+       "      <th>id</th>\n",
+       "      <th>is_employed</th>\n",
+       "      <th>j_valid_from</th>\n",
+       "      <th>j_valid_to</th>\n",
+       "      <th>FirstName1</th>\n",
+       "      <th>Age1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>49</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'eS5RO30s5l'</td>\n",
+       "      <td>b'eMIr6rSfr'</td>\n",
+       "      <td>b'0'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'hUohc0'</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>82</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'Uq5Xvg104k26'</td>\n",
+       "      <td>b'TvlcCTras0o'</td>\n",
+       "      <td>b'1'</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'4t2OLsfCQK'</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>78</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'qpdOaVbkWxU8P'</td>\n",
+       "      <td>b'BfbMR5vc732'</td>\n",
+       "      <td>b'2'</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'lHa6C30'</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>88</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'4MfNDqcQuDe1s'</td>\n",
+       "      <td>b'1TloPOuw4XB'</td>\n",
+       "      <td>b'3'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'JVdU4M'</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'kQDdlpQQjW'</td>\n",
+       "      <td>b'FflsTMEBY3'</td>\n",
+       "      <td>b'4'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'2hxwqatOVKvTQ'</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>42</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'xqQjWvI'</td>\n",
+       "      <td>b'5sa3H67GPVBw'</td>\n",
+       "      <td>b'5'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'scjDjV'</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>20</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'Lc2iriaKGc'</td>\n",
+       "      <td>b'UauvtgV'</td>\n",
+       "      <td>b'6'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'NKim8FB'</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>71</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'xvQtag'</td>\n",
+       "      <td>b'ADugcwJaNivhb'</td>\n",
+       "      <td>b'7'</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'5YKYKaSLaq'</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>86</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'5DdjIHXf2TCvl'</td>\n",
+       "      <td>b'pdwWWe'</td>\n",
+       "      <td>b'8'</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'tvvmeFDmE'</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>30</td>\n",
+       "      <td>True</td>\n",
+       "      <td>b'JXFcQK0KtUf0y'</td>\n",
+       "      <td>b'2Gi8urgnAJBp'</td>\n",
+       "      <td>b'9'</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.618862e+09</td>\n",
+       "      <td>2.533708e+11</td>\n",
+       "      <td>b'SWA66SwQ'</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Age_valid         FirstName          LastName    id  is_employed  \\\n",
+       "0   49       True     b'eS5RO30s5l'      b'eMIr6rSfr'  b'0'            1   \n",
+       "1   82       True   b'Uq5Xvg104k26'    b'TvlcCTras0o'  b'1'            2   \n",
+       "2   78       True  b'qpdOaVbkWxU8P'    b'BfbMR5vc732'  b'2'            2   \n",
+       "3   88       True  b'4MfNDqcQuDe1s'    b'1TloPOuw4XB'  b'3'            1   \n",
+       "4   56       True     b'kQDdlpQQjW'     b'FflsTMEBY3'  b'4'            1   \n",
+       "5   42       True        b'xqQjWvI'   b'5sa3H67GPVBw'  b'5'            1   \n",
+       "6   20       True     b'Lc2iriaKGc'        b'UauvtgV'  b'6'            1   \n",
+       "7   71       True         b'xvQtag'  b'ADugcwJaNivhb'  b'7'            2   \n",
+       "8   86       True  b'5DdjIHXf2TCvl'         b'pdwWWe'  b'8'            1   \n",
+       "9   30       True  b'JXFcQK0KtUf0y'   b'2Gi8urgnAJBp'  b'9'            2   \n",
+       "\n",
+       "   j_valid_from    j_valid_to        FirstName1  Age1  \n",
+       "0  1.618862e+09  2.533708e+11         b'hUohc0'    34  \n",
+       "1  1.618862e+09  2.533708e+11     b'4t2OLsfCQK'    19  \n",
+       "2  1.618862e+09  2.533708e+11        b'lHa6C30'    89  \n",
+       "3  1.618862e+09  2.533708e+11         b'JVdU4M'    69  \n",
+       "4  1.618862e+09  2.533708e+11  b'2hxwqatOVKvTQ'    79  \n",
+       "5  1.618862e+09  2.533708e+11         b'scjDjV'    45  \n",
+       "6  1.618862e+09  2.533708e+11        b'NKim8FB'    45  \n",
+       "7  1.618862e+09  2.533708e+11     b'5YKYKaSLaq'    62  \n",
+       "8  1.618862e+09  2.533708e+11      b'tvvmeFDmE'    37  \n",
+       "9  1.618862e+09  2.533708e+11       b'SWA66SwQ'    32  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with exetera.core.session.Session() as s:\n",
+    "    src1 = s.open_dataset(\"dataset.hdf5\", \"r\", \"dataset\")\n",
+    "    src2 = s.open_dataset(\"other_dataset/dataset.hdf5\", \"r\", \"otherdataset\")\n",
+    "    dest = s.open_dataset(\"datasetx2.hdf5\", \"w\", \"datasetx2\") \n",
+    "\n",
+    "    sframe = src1[\"participants\"]\n",
+    "    dest[\"participants\"] = sframe\n",
+    "    dframe = dest[\"participants\"] \n",
+    "\n",
+    "    otherframe=src2[\"participants\"]\n",
+    "    \n",
+    "    result = simple_merge(s, dframe, otherframe, \"id\", \"id\", \"FirstName\", \"Age\", field_suffix=\"1\")\n",
+    "\n",
+    "    df = pd.DataFrame({f: dframe[f].data[:] for f in dframe})\n",
+    "\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python [conda env:monai]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-monai-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -733,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
