--- a/examples/exetera_import.ipynb
+++ b/examples/exetera_import.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d83b3a7f",
    "metadata": {},
    "source": [
     "# Exetera Import Example\n",
@@ -14,19 +15,58 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "05843b9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting RandomDataset\n",
+      "  Using cached RandomDataset-0.1.4-py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: exetera in c:\\users\\eric\\miniconda3\\lib\\site-packages (0.5.2)\n",
+      "Requirement already satisfied: pandas in c:\\users\\eric\\miniconda3\\lib\\site-packages (from exetera) (1.1.3)\n",
+      "Requirement already satisfied: numba in c:\\users\\eric\\miniconda3\\lib\\site-packages (from exetera) (0.51.2)\n",
+      "Requirement already satisfied: h5py in c:\\users\\eric\\miniconda3\\lib\\site-packages (from exetera) (3.2.1)\n",
+      "Requirement already satisfied: numpy in c:\\users\\eric\\miniconda3\\lib\\site-packages (from exetera) (1.20.1)\n",
+      "Requirement already satisfied: pyyaml in c:\\users\\eric\\miniconda3\\lib\\site-packages (from RandomDataset) (5.4.1)\n",
+      "Requirement already satisfied: click in c:\\users\\eric\\miniconda3\\lib\\site-packages (from RandomDataset) (7.1.2)\n",
+      "Requirement already satisfied: cached-property in c:\\users\\eric\\miniconda3\\lib\\site-packages (from h5py->exetera) (1.5.2)\n",
+      "Requirement already satisfied: llvmlite<0.35,>=0.34.0.dev0 in c:\\users\\eric\\miniconda3\\lib\\site-packages (from numba->exetera) (0.34.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\eric\\miniconda3\\lib\\site-packages (from numba->exetera) (52.0.0.post20210125)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\eric\\miniconda3\\lib\\site-packages (from pandas->exetera) (2021.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\eric\\miniconda3\\lib\\site-packages (from pandas->exetera) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\eric\\miniconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas->exetera) (1.15.0)\n",
+      "Installing collected packages: RandomDataset\n",
+      "Successfully installed RandomDataset-0.1.4\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install RandomDataset exetera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e93a2bd0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "import randomdataset"
+    "import randomdataset\n",
+    "import exetera, exetera.core, exetera.processing"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c4235f0a",
    "metadata": {},
    "source": [
     "The YAML schema is written out which will be used to generate the random data:"
@@ -35,18 +75,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ddeda847",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting randomschema.yaml\n"
+      "Writing randomschema.yml\n"
      ]
     }
    ],
    "source": [
-    "%%writefile randomschema.yaml\n",
+    "%%writefile randomschema.yml\n",
     "\n",
     "- typename: randomdataset.generators.CSVGenerator\n",
     "  num_lines: 10\n",
@@ -102,6 +143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ea03e20",
    "metadata": {},
    "source": [
     "Instead of invoking the `generate_dataset` command line utility the command can be called directly through the imported library:"
@@ -110,24 +152,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "bdb8df76",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Schema: 'randomschema.yaml'\n",
+      "Schema: 'randomschema.yml'\n",
       "Output: '.'\n"
      ]
     }
    ],
    "source": [
     "# !generate_dataset randomschema.yaml .\n",
-    "randomdataset.application.generate_dataset.callback(\"randomschema.yaml\",\".\")"
+    "randomdataset.generate_dataset.callback(\"randomschema.yml\",\".\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "5d1597f7",
    "metadata": {},
    "source": [
     "Next the Exetera schema is written out, which looks like the YAML schema except with some extra specifiers for primary and foreign keys:"
@@ -136,6 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
+   "id": "263e5bbd",
    "metadata": {},
    "outputs": [
     {
@@ -236,6 +281,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cacdccb0",
    "metadata": {},
    "source": [
     "The conversion command is run to produce the HDF5 dataset:"
@@ -243,39 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
+   "id": "12439d1d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "2021-04-19 16:16:52.509426+00:00\n",
-      "exeteraschema.json\n",
-      "{'participants': 'participants.csv', 'tests': 'tests.csv'}\n",
-      "loading took 2.6226043701171875e-05 seconds\n",
-      "loading took 2.288818359375e-05 seconds\n",
-      "0 rows parsed in 0.016004085540771484s\n",
-      "9 rows parsed in 0.1243126392364502s\n",
-      "participants <KeysViewHDF5 ['participants']>\n",
-      "0 rows parsed in 0.023021459579467773s\n",
-      "9 rows parsed in 0.10892724990844727s\n",
-      "tests <KeysViewHDF5 ['participants', 'tests']>\n",
-      "<KeysViewHDF5 ['participants', 'tests']>\n",
-      "total 285M\n",
-      "-rw-r--r-- 1 localek10 bioeng  292 Apr 13 15:02 customers.csv\n",
-      "-rw-r--r-- 1 localek10 bioeng 253M Apr 19 17:16 dataset.hdf5\n",
-      "-rw-r--r-- 1 localek10 bioeng  33M Apr 19 17:16 datasetx2.hdf5\n",
-      "-rw-r--r-- 1 localek10 bioeng  17K Apr 19 17:16 exetera_import.ipynb\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.7K Apr 19 17:16 exeteraschema.json\n",
-      "-rw-r--r-- 1 localek10 bioeng  413 Apr 13 21:50 participants.csv\n",
-      "-rw-r--r-- 1 localek10 bioeng  793 Apr 13 15:02 paymentschema.yaml\n",
-      "-rw-r--r-- 1 localek10 bioeng  803 Apr 13 15:02 payments.csv\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.5K Apr  7 23:24 randomdataset.zip\n",
-      "-rw-r--r-- 1 localek10 bioeng 1.3K Apr 13 21:50 randomschema.yaml\n",
-      "-rw-r--r-- 1 localek10 bioeng 5.1K Apr 13 15:02 simple_dataset.ipynb\n",
-      "-rw-r--r-- 1 localek10 bioeng  456 Apr 13 21:50 tests.csv\n"
+      "'exetera' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -288,7 +311,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52d0a93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exetera.core.importer.import_with_schema()"
+   ]
+  },
+  {
    "cell_type": "markdown",
+   "id": "656058ca",
    "metadata": {},
    "source": [
     "Let's import ExeTera and read some of the data back:"
@@ -296,18 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import exetera, exetera.core, exetera.processing\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
+   "id": "fc601c35",
    "metadata": {},
    "outputs": [
     {
@@ -473,6 +497,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a6069897",
    "metadata": {},
    "source": [
     "Now we'll do the pointless thing of merging a dataset with itself, making a copy to preserve the original data:"
@@ -481,6 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "d0fa1121",
    "metadata": {},
    "outputs": [
     {
@@ -718,6 +744,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bde6d79a",
    "metadata": {},
    "source": [
     "Here we will create a new dataset in a new directory then merge that with our existing one:"
@@ -726,6 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "a95e4450",
    "metadata": {},
    "outputs": [
     {
@@ -764,6 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "473c8624",
    "metadata": {},
    "outputs": [
     {
@@ -987,9 +1016,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:monai]",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "conda-env-monai-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1001,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
