--- a/examples/simple_linked_dataset.ipynb
+++ b/examples/simple_linked_dataset.ipynb
@@ -401,7 +401,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "conda-env-exetera_py38-py"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -413,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
