--- a/examples/json_dataset.ipynb
+++ b/examples/json_dataset.ipynb
@@ -15,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "95e9168d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +29,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "700fb00f",
    "metadata": {},
    "source": [
     "The YAML schema is written out which will be used to generate the random data:"
@@ -36,6 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "293ea7d5",
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +90,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "8c59dace",
    "metadata": {},
    "source": [
     "The generation is done by passing this schema to the `generate_dataset` command line utility in the library:\n",
@@ -101,6 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "eb78199c",
    "metadata": {},
    "outputs": [
     {
@@ -115,12 +120,13 @@
     }
    ],
    "source": [
-    "randomdataset.application.generate_dataset.callback(\"paymentschema_json.yaml\",\".\")"
+    "randomdataset.application.generate_dataset.callback(\"paymentschema_json.yaml\", \".\")"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "3391769e",
    "metadata": {},
    "source": [
     "The output is two JSON files, we can look at `customers_json.csv` to see the list of randomly generated customer:"
@@ -129,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "248fecbc",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "66c9ba98",
    "metadata": {},
    "outputs": [
@@ -185,9 +192,104 @@
     "import json\n",
     "\n",
     "with open(\"customers.json\") as o:\n",
-    "    data=json.load(o)\n",
+    "    data = json.load(o)\n",
     "\n",
     "print(data)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "25019e4e",
+   "metadata": {},
+   "source": [
+    "Using a Jupyter widget a tree view can be created:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "51755663",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "data": [
+        [
+         0,
+         "cFF3vm5XGeh",
+         "NpweyS"
+        ],
+        [
+         1,
+         "X4xOvr",
+         "Dx5yAslv"
+        ],
+        [
+         2,
+         "OHjeDIqm0J",
+         "xDNQMubp3fbpD"
+        ],
+        [
+         3,
+         "q6JJwF",
+         "jwKSf6kGvY3S"
+        ],
+        [
+         4,
+         "wrwGkTtIdjg8V",
+         "JtlEx5YqoSMs"
+        ],
+        [
+         5,
+         "xMyhP335D",
+         "4RuKdiD5"
+        ],
+        [
+         6,
+         "pgusVtOScPu",
+         "lEtjY1lg"
+        ],
+        [
+         7,
+         "GwtQnDFBSwG",
+         "02vaMHEe5D2"
+        ],
+        [
+         8,
+         "vTVBAJKbi",
+         "47HlCy"
+        ],
+        [
+         9,
+         "XA56V36msh",
+         "coDvP6hmNQSX"
+        ]
+       ],
+       "header": [
+        "id",
+        "FirstName",
+        "LastName"
+       ]
+      },
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import JSON\n",
+    "JSON(data)"
    ]
   },
   {
@@ -318,7 +420,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.DataFrame(data[\"data\"],columns=data[\"header\"])"
+    "pd.DataFrame(data[\"data\"], columns=data[\"header\"])"
    ]
   }
  ],
